ui: work on post & comments layout; switch back to single global theme; various

--- a/src/ui/component/comment/CommentEditor.pug
+++ b/src/ui/component/comment/CommentEditor.pug
@@ -30,16 +30,17 @@ form.comment-editor
 
 style.
 	.comment-editor
-		width 480px
+		margin 0 1em
+		width 360px
 	.comment-editor-actions
 		display flex
 		justify-content flex-end
-		margin-top 6px
+		padding 12px 0
 	.comment-editor-text-field
 		border 1px solid
-		border-radius 1em
+		border-radius 12px
 		font-family monospace
 		line-height inherit
-		padding 1em
+		padding 9px
 		resize none
 		white-space pre-line
