--- a/src/ui/component/global/GlobalThemeColors.pug
+++ b/src/ui/component/global/GlobalThemeColors.pug
@@ -3,21 +3,20 @@ script.
 	
 	import { HexColor } from '../../../lib/index.js'
 
+	theme = 'light'
+
 	set_theme_colors = (main_color, secondary_color) ->
 		if !main_color
 			main_color = secondary_color
 			secondary_color = null
 		text_color = if main_color then HexColor.contrast(main_color) else null
 		document.body.style.setProperty('--c-subreddit-theme', main_color or 'var(--c-subreddit-theme-default)')
-		document.body.style.setProperty('--c-subreddit-theme-secondary', secondary_color or 'var(--c-subreddit-theme-secondary-default)')
 		document.body.style.setProperty('--c-subreddit-theme-text', text_color or 'var(--c-subreddit-theme-text-default)')
-		switch text_color
-			when '#000000'
-				document.body.style.setProperty('--c-comment-text', '#333')
+		switch theme
+			when 'light'
 				document.body.classList.remove('color-strategy-white-text')
 				document.body.classList.add('color-strategy-black-text')
 			else
-				document.body.style.setProperty('--c-comment-text', 'var(--c-subreddit-theme)')
 				document.body.classList.remove('color-strategy-black-text')
 				document.body.classList.add('color-strategy-white-text')
 
