--- a/src/ui/component/post/PostComments.pug
+++ b/src/ui/component/post/PostComments.pug
@@ -41,7 +41,7 @@ script.
 
 style.
 	ol
-		margin-top 2em
+		margin-left -1em
 	.post-comments-empty-notification
 		color var(--c-text-weak)
 		padding 1em 0
@@ -49,4 +49,5 @@ style.
 		color var(--c-text-weak)
 		padding 1em 0
 	.post-more-replies
-		margin-top 1.333em
+		margin 0.666em 1em
+		margin-top 0
