--- a/src/ui/component/shared/Button.pug
+++ b/src/ui/component/shared/Button.pug
@@ -46,7 +46,7 @@ style.
 		align-items center
 		background var(--c-blend-weak)
 		border 1px solid transparent
-		border-radius 0.5em
+		border-radius 6px
 		display inline-flex
 		gap 5px
 		line-height 18px
@@ -71,9 +71,4 @@ style.
 		padding 0 1ch
 	.button-dropdown
 		font inherit
-		padding-bottom 2px
-		padding-left 4px
-		padding-top 0
-	.button-dropdown-option
-		background var(--c-subreddit-theme)
-		color var(--c-subreddit-theme-text)
+		padding-top 3px
