--- a/src/ui/component/subreddit/SubredditRules.pug
+++ b/src/ui/component/subreddit/SubredditRules.pug
@@ -44,5 +44,7 @@ style.
 		letter-spacing 0
 		line-height inherit
 		text-transform uppercase
+	.subreddit-rules
+		width 320px
 	.subreddit-rules-empty
 		color var(--c-text-weak)
