--- a/src/ui/component/comment/Comment.pug
+++ b/src/ui/component/comment/Comment.pug
@@ -2,6 +2,7 @@ script.
 	import { getContext } from 'svelte'
 	
 	import api from '../../../api/index.js'
+	import { Time } from '../../../lib/index.js'
 	import { format_url } from '../../routing/url.coffee'
 
 	import BanDialog from '../dialog/BanDialog.pug'
@@ -10,12 +11,14 @@ script.
 	import FormattedHTML from '../shared/FormattedHTML.pug'
 	import Popup from '../shared/Popup.pug'
 	import ReportDialog from '../dialog/ReportDialog.pug'
+	import UserByline from '../user/UserByline.pug'
 
 	export id = null
 	export out_of_context = false
 	
 	banning = false
 	comment = null
+	deeper_replies_loading = false
 	editing = false
 	edit_error = null
 	edit_sending = false
@@ -84,10 +87,15 @@ script.
 	api.loadWatch(api.ID('comment', id),
 		(x) ->
 			{ data: comment } = x
-			if comment?.more_replies
-				api.watch(comment.more_replies_id,
-					(x) -> { loading: more_replies_loading } = x
-				)
+			if comment
+				if comment.deeper_replies
+					api.watch(comment.deeper_replies_id,
+						(x) -> { loading: deeper_replies_loading } = x
+					)
+				else if comment.more_replies
+					api.watch(comment.more_replies_id,
+						(x) -> { loading: more_replies_loading } = x
+					)
 	)
 
 {#if editing}
@@ -96,8 +104,11 @@ script.
 	li(class={out_of_context ? 'comment-clip' : 'comment-tree'})
 		<!-- 'comment' role is draft status and not recognized yet -->
 		<!-- svelte-ignore a11y-unknown-role -->
-		article.color-strategy-black-text.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[' && comment.body.at(-1) === ']') || comment.removal_reason} class:comment-downvoted={comment.likes === false} class:comment-highlighted={id === focus_comment_id} class:comment-upvoted={comment.likes === true} class:comment-with-low-score={!comment.score_hidden && comment.score < 1} data-can-edit={comment.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !comment.locked) || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-pinned={comment.stickied || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)} role='comment')
+		article.color-strategy-black-text.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[' && comment.body.at(-1) === ']') || comment.removal_reason} class:comment-downvoted={comment.likes === false} class:comment-highlighted={id === focus_comment_id} class:comment-upvoted={comment.likes === true} class:comment-with-low-score={!comment.score_hidden && comment.score < 1} data-can-edit={comment.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !comment.locked) || null} data-can-mod={comment.can_mod_post || null} data-distinguish={comment.distinguished || null} data-pinned={comment.stickied || null} data-radial-menu='comment' data-saved={comment.saved || null} on:radialmenu={e => interact(e.detail)} role='comment' title="{Time.sToAbsRelTimeStr(comment.created_utc)}{comment.edited ? ', edited ' + Time.sToAbsRelTimeStr(comment.edited) : ''}")
+			button.comment-score(data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:mousedown={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null}) {comment.score_hidden ? '?' : comment.score}
 			FormattedHTML(html={comment.body_html})
+			cite.comment-user-info
+				UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_color={comment.author_flair_background_color} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
 		{#if reporting}
 			Popup(on:close={() => reporting = false})
 				ReportDialog(on:submit={e => interact('report_finish', { violation_reason: e.detail })} subreddit_name={comment.subreddit} target_type='comment')
@@ -105,55 +116,71 @@ script.
 			Popup(on:close={() => banning = false})
 				BanDialog(on:submit={e => interact('remove_and_ban_user_finish', { days: e.detail.days, message_to_user: e.detail.message_to_user, subreddit_name: comment.subreddit, user_name: comment.author })})
 		{#if out_of_context}
-			cite.comment-source
-				Button(link={format_url({ post_focus_comment_id: id, post_focus_comment_parent_count: 3, post_id: comment.link_id.slice(3), subreddit_name: comment.subreddit })} text='in {comment.subreddit} →')
+			cite.comment-source-info
+				Button(link={format_url({ post_focus_comment_id: id, post_focus_comment_parent_count: 3, post_id: comment.link_id.slice(3), subreddit_name: comment.subreddit })} text='{comment.subreddit} →')
 		{:else}
 			ol.comment-replies
 				{#if replying}
 					CommentEditor(error={reply_error} on:submit={e => interact('reply_finish', { text: e.detail })} sending={reply_sending})
-				{#each comment.replies as reply_id (reply_id)}
-					svelte:self(id={reply_id})
-				{#if comment.num_more_replies > 0}
-					.comment-more-replies
-						Button(action={() => api.load(comment.more_replies_id)} loading={more_replies_loading} text="{comment.num_more_replies} more")
 				{#if comment.deeper_replies}
-					.comment-more-replies
-						Button(link={format_url({ post_focus_comment_id: id, post_id: comment.link_id.slice(3), subreddit_name: comment.subreddit })} text='Continue thread...')
+					.comment-deeper-replies
+						Button(action={() => api.load(comment.deeper_replies_id)} loading={deeper_replies_loading} text="? more")
+				{:else}
+					{#each comment.replies as reply_id (reply_id)}
+						svelte:self(id={reply_id})
+					{#if comment.num_more_replies > 0}
+						.comment-more-replies
+							Button(action={() => api.load(comment.more_replies_id)} loading={more_replies_loading} text="{comment.num_more_replies} more")
 
 style.
 	.comment
-		background var(--c-comment-bg)
-		border-radius 1em
-		color var(--c-comment-text)
 		display inline-block
-		font-weight 500
-		max-width 480px
-		padding 10px 1em
+		margin 0.666em 1em !important
+		max-width 360px
 		position relative
+		:global(& > .md)
+			background var(--c-theme)
+			border-radius 12px
+			padding 8px 10px 9px 11px
+		:global(&.comment-highlighted > .md)
+			background #ffdd5d
+		:global(& img)
+			background black
+			max-height 128px
+			width auto
 		&.comment-deleted
 			opacity 0.25
 			pointer-events none
-		&.comment-highlighted
-			outline 1px solid
 		&.comment-with-low-score:not(&.comment-deleted)
 			opacity 0.5
-		:global(& img)
-			background var(--c-con-weak)
-			border-radius 0.5em
-			max-height 128px
-			width auto
 	.comment-clip
 		position relative
+	.comment-deeper-replies
+		margin 0.666em 1em
+		margin-top 0
 	.comment-more-replies
-		margin-top 1.333em
+		margin 0.666em 1em
+		margin-top 0
 	.comment-replies
 		border-left 1px solid var(--c-blend-normal)
-		margin-top 1.333em
-		padding-left 23px
-	.comment-source
-		left calc(100% + 1em)
+		padding-left 2em
+	.comment-score
+		background var(--c-page-bg)
+		color var(--c-text-weak)
 		position absolute
-		top 0
+		right calc(100% + 1ch)
+		padding 0.5ch 1ch
+		top -0.5ch
+		.comment-upvoted &
+			color orangered
+		.comment-downvoted &
+			color var(--c-text-faint)
+	.comment-source-info
+		position absolute
+		top 0.666em
 		white-space pre
-	.comment-tree
-		margin-top 1.333em
+	.comment-user-info
+		bottom 100%
+		left 0
+		position absolute
+		white-space pre
