--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -21,9 +21,10 @@ script.
 	import PostTag from './PostTag.pug'
 	import ReportDialog from '../dialog/ReportDialog.pug'
 	import SubredditAvatar from '../subreddit/SubredditAvatar.pug'
+	import UserByline from '../user/UserByline.pug'
 	import Warning from '../shared/Warning.pug'
 	
-	export comments_initial_count = 25
+	export comments_initial_count = 200
 	export comments_sort = null
 	export expanded = true
 	export focus_comment_id = null
@@ -130,7 +131,7 @@ script.
 
 svelte:head
 	{#if expanded && post}
-		title {post.subreddit.toLowerCase()} → {post.title}
+		title {post.subreddit} → {post.title}
 {#if error}
 	{#if error.code === 403}
 		Error(message="This post is in a private subreddit which you are not approved to access." title="Private subreddit")
@@ -141,105 +142,100 @@ svelte:head
 	{:else}
 		Error(message="An unknown error occurred." title="Unknown error")
 {:else if post}
-	article.post(class:post-downvoted={post.likes === false} class:post-expanded={expanded} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)})
-		header.post-header
-			.post-subreddit
-				SubredditAvatar(name={post.subreddit} size='medium')
-			{#if post.link_flair_text || post.locked || post.over_18 || post.spoiler || post.stickied}
-				ol.post-tags
-					{#if post.link_flair_text}
-						PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} subreddit_name={post.subreddit} text={post.link_flair_text})
-					{#if post.spoiler}
-						PostTag(name='spoiler')
-					{#if post.over_18}
-						PostTag(name='nsfw')
-					{#if post.stickied}
-						PostTag(name='sticky')
-					{#if post.locked}
-						PostTag(name='locked')
-			h1.post-title {post.title}
-			date(datetime={post.created_utc}) {Time.sToAbsRelTimeStr(post.created_utc)}
-		{#if expanded}
-			{#if post.removed_by_category}
-				section.post-content-empty
-					{#if post.removed_by_category === 'author' || post.removed_by_category === 'deleted'}
-						Error(message="Post deleted by author.")
-					{:else if post.removed_by_category === 'automod_filtered'}
-						Error(message="Post removed by AutoModerator.")
-					{:else if post.removed_by_category === 'content_takedown'}
-						Error(message="Post removed by Reddit due to site policy violation(s).")
-					{:else if post.removed_by_category === 'copyright_takedown'}
-						Error(message="Post removed by Reddit due to a copyright notice.")
-					{:else if post.removed_by_category === 'moderator'}
-						Error(message="Post removed by a moderator.")
-					{:else if post.removed_by_category === 'reddit'}
-						Error(message="Post removed by Reddit's spam filter.")
-					{:else}
-						Error(message="Post removed by Reddit (reason not specified).")
-			{:else if focus_comment_id}
-				section.post-content-empty
-					Warning(message="Viewing a single comment.")
-						Button(link={format_url({ post_id: id, subreddit_name: post.subreddit })} text='View full post →')
-			{:else if post.format === 'talk'}
-				section.post-content-empty
-					Error(message="Reddit Talks are only available on the official site.")
-						Button(link='https://www.reddit.com/talk/{post.live_audio?.room_id}' new_tab={true} text='View on Reddit')
-			{:else if post.selftext || post.format !== 'self'}
-				section.post-content(class:color-strategy-black-text={!(post.format === 'video')} class:post-content-with-bg={!(post.format === 'video') && !(post.format === 'link' && (html_embeds(post) || iframe_embeds(post.url)))})
-					{#if post.format === 'crosspost'}
-						a.post-crosspost-link(href={format_url({ post_id: post.crosspost_parent })})
-							svelte:self(expanded={false} id={post.crosspost_parent})
-					{:else if post.format === 'image'}
-						ol.post-gallery
+	article.post-and-comments(class:post-and-comments-expanded={expanded})
+		article.post(class:post-downvoted={post.likes === false} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)})
+			header.post-header
+				button.post-score(data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:mousedown={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null}) {post.hide_score ? '?' : post.score}
+				.post-subreddit
+					SubredditAvatar(name={post.subreddit} size='medium')
+				{#if post.link_flair_text || post.locked || post.over_18 || post.spoiler || post.stickied}
+					ol.post-tags
+						{#if post.link_flair_text}
+							PostFlair(color={post.link_flair_background_color} emoji_style='image' rich_text={post.link_flair_richtext} subreddit_name={post.subreddit} text={post.link_flair_text})
+						{#if post.spoiler}
+							PostTag(name='spoiler')
+						{#if post.over_18}
+							PostTag(name='nsfw')
+						{#if post.stickied}
+							PostTag(name='sticky')
+						{#if post.locked}
+							PostTag(name='locked')
+				h1.post-title {post.title}
+				UserByline(distinguish={post.distinguished} flair_color={post.author_flair_background_color} flair_rich_text={post.author_flair_richtext} flair_text={post.author_flair_text} name={post.author})
+			{#if expanded}
+				section.post-body
+					{#if post.removed_by_category}
+						{#if post.removed_by_category === 'author' || post.removed_by_category === 'deleted'}
+							Error(message="Post deleted by author.")
+						{:else if post.removed_by_category === 'automod_filtered'}
+							Error(message="Post removed by AutoModerator.")
+						{:else if post.removed_by_category === 'content_takedown'}
+							Error(message="Post removed by Reddit due to site policy violation(s).")
+						{:else if post.removed_by_category === 'copyright_takedown'}
+							Error(message="Post removed by Reddit due to a copyright notice.")
+						{:else if post.removed_by_category === 'moderator'}
+							Error(message="Post removed by a moderator.")
+						{:else if post.removed_by_category === 'reddit'}
+							Error(message="Post removed by Reddit's spam filter.")
+						{:else}
+							Error(message="Post removed by Reddit (reason not specified).")
+					{:else if focus_comment_id}
+						Warning(message="Viewing a single comment.")
+							Button(link={format_url({ post_id: id, subreddit_name: post.subreddit })} text='View full post →')
+					{:else if post.format === 'talk'}
+						Error(message="Reddit Talks are only available on the official site.")
+							Button(link='https://www.reddit.com/talk/{post.live_audio?.room_id}' new_tab={true} text='View on Reddit')
+					{:else if post.selftext || post.format !== 'self'}
+						{#if post.format === 'crosspost'}
+							a.post-crosspost-link(href={format_url({ post_id: post.crosspost_parent })})
+								svelte:self(expanded={false} id={post.crosspost_parent})
+						{:else if post.format === 'image'}
 							{#each post.media as media, i}
 								figure.post-gallery-image
 									a(href={media.image_url} rel='external noreferrer preconnect' target='_blank')
 										picture
 											{#if !media.is_gif}
 												source(srcset={media.image_url_640})
-											img.post-image(alt='{i + 1} of {post.media.length}' class:post-image-fixed-width={media.image_url_640} src={media.image_url} style="aspect-ratio: {media.aspect_ratio}")
+											img.post-image(alt='{i + 1} of {post.media.length}' src={media.image_url} style='aspect-ratio: {media.aspect_ratio}')
 									{#if media.caption_text || media.caption_url}
 										figcaption.post-gallery-image-caption
 											{#if media.caption_text}
 												| {media.caption_text}
 											{#if media.caption_url}
 												a(href={relativize_url(media.caption_url)}) {relativize_url(media.caption_url)}
-					{:else if post.format === 'link'}
-						{#if post.url}
-							{#if html_embeds(post)}
-								{@const embed = html_embeds(post)}
-									{@html embed.html}
-									{#if embed.script === 'twitter'}
-										script(defer='true' src='https://platform.twitter.com/widgets.js')
-							{:else if iframe_embeds(post.url)}
-								{@const embed = iframe_embeds(post.url)}
-									<!-- svelte wants iframe "title" attribute, which interferes with fullscreen playback (tooltip obscuring screen) and anyway provides no additional info here beyond what's in the URL -->
-									<!-- svelte-ignore a11y-missing-attribute -->
-									iframe.post-iframe(allow={embed.iframe_allow} allowfullscreen='true' style='aspect-ratio: {embed.iframe_aspect_ratio || 1}' src={embed.iframe_url})
-							{:else}
-								a.post-link(href={relativize_url(post.url)} rel='external noopener preconnect') 
-									strong.post-link-domain {link_domain(relativize_url(post.url))}
-									span.post-link-path {link_path(relativize_url(post.url))}
-					{:else if post.format === 'prediction'}
-						ol.md.post-predictions
-							{#each post.tournament_data.predictions as prediction}
-								strong.post-prediction-title {prediction.title}
-								dl.post-prediction-options
-									{#each prediction.options as option}
-										li.post-prediction-option
-											dt
-												meter(max={prediction.total_stake_amount} min={0} value={option.total_amount})
-											dd {option.text}
-						Warning(message="Voting is only available on the official site.")
-							Button(link={post.url} new_tab={true} text='View on Reddit')
-					{:else if post.format === 'video'}
-						{@const media = post.media[0]}
-							.post-video
-								MediaPlayer(audio_url={media.video_audio_url} height={270} video_url={media.video_url} width={480})
-					{#if post.selftext_html}
-						.post-selftext
+						{:else if post.format === 'link'}
+							{#if post.url}
+								{#if html_embeds(post)}
+									{@const embed = html_embeds(post)}
+										{@html embed.html}
+										{#if embed.script === 'twitter'}
+											script(defer='true' src='https://platform.twitter.com/widgets.js')
+								{:else if iframe_embeds(post.url)}
+									{@const embed = iframe_embeds(post.url)}
+										<!-- svelte wants iframe "title" attribute, which interferes with fullscreen playback (tooltip obscuring screen) and anyway provides no additional info here beyond what's in the URL -->
+										<!-- svelte-ignore a11y-missing-attribute -->
+										iframe.post-iframe(allow={embed.iframe_allow} allowfullscreen='true' src={embed.iframe_url})
+								{:else}
+									a.md.post-link(href={relativize_url(post.url)} rel='external noopener preconnect') {relativize_url(post.url)}
+						{:else if post.format === 'prediction'}
+							ol.md.post-predictions
+								{#each post.tournament_data.predictions as prediction}
+									strong.post-prediction-title {prediction.title}
+									dl.post-prediction-options
+										{#each prediction.options as option}
+											li.post-prediction-option
+												dt
+													meter(max={prediction.total_stake_amount} min={0} value={option.total_amount})
+												dd {option.text}
+							Warning(message="Voting is only available on the official site.")
+								Button(link={post.url} new_tab={true} text='View on Reddit')
+						{:else if post.format === 'video'}
+							{@const media = post.media[0]}
+								MediaPlayer(audio_url={media.video_audio_url} height={360} video_url={media.video_url} width={360})
+						{#if post.selftext_html}
 							FormattedHTML(html={post.selftext_html})
-			section.post-comments
+		{#if expanded}
+			article.post-comments
 				menu.post-comments-sort-controls
 					Button(action={value => internal_navigate({ href: location.origin + format_url({ post_comments_sort: value, post_id: id, subreddit_name: post.subreddit }) })} disabled={!post.num_comments} options={post.discussion_type === 'CHAT' ? comments_sort_options_chat : post.contest_mode ? comments_sort_options_contest : comments_sort_options} selected={comments_sort})
 					{#if comments_sort === 'new'}
@@ -259,74 +255,56 @@ svelte:head
 
 style.
 	.post
-		padding-left 96px
-		width 672px
-		&:not(.post-expanded)
-			background var(--c-comment-bg)
-			border-radius 1em
-			color var(--c-comment-text)
-			padding 1em
-			width 480px
-		:global(.post-crosspost-link > &)
-			width auto !important
-	.post-comments
-		margin-top 2em
+		background var(--c-theme)
+		box-sizing content-box
+		border-radius 12px
+		width 360px
+		&.post-with-low-score
+			opacity 0.5
+	.post-and-comments
 		width 100%
-	.post-content
+		&.post-and-comments-expanded
+			padding-left calc(50% - 180px)
+			padding-right 40px
+	.post-body
 		align-items flex-start
-		border-radius 1em
 		display flex
+		border-top 2px solid var(--c-page-bg)
 		flex-flow column nowrap
-		font-weight 500
-		gap calc(2em/3)
-		margin-top 1em
-		width 480px
-		&.post-content-with-bg
-			background var(--c-comment-bg)
-			color var(--c-comment-text)
-			padding 10px 1em
+		gap 2px
+		position relative
+		:global(& > .md)
+			padding 8px 10px 9px 11px
 		:global(& .twitter-tweet)
 			margin 0 !important
-			width 480px !important
-	.post-content-empty
-		margin-top 1em
-	.post-gallery
+			width 360px !important
+		& > *:last-child
+		& > figure:last-child > *:last-child img
+			border-radius 0 0 12px 12px
+	.post-comments
 		display flex
 		flex-flow column nowrap
 		gap 1.333em
-		padding 0.666em 0.5em
-	.post-gallery-image
-		display flex
-		flex-flow column nowrap
-		gap 0.333em
+		margin-top 2em
+		width 100%
 	.post-gallery-image-caption
 		color var(--c-text-weak)
 		font-size 13px
 		letter-spacing 0.5px
+		padding 10px
 	.post-header
-		.post-expanded > &
-			position relative
-			width 480px
+		position relative
+		padding 10px
 	.post-iframe
-		background var(--c-con-weak)
-		border-radius 1em
-		width 480px
+		aspect-ratio 1
+		background black
+		width 100%
 	.post-image
-		background var(--c-con-weak)
-		border-radius 10px
-	.post-image-fixed-width
-		width 435px
+		background black
+		width 360px
 	.post-link
-		display flex
-		flex-flow row nowrap
-		font-size 1.25em
-		line-height 1.5
 		text-decoration underline
 		word-break break-all
-	.post-link-domain
-		flex 0 0 auto
-	.post-link-path
-		color var(--c-text-weak)
 	.post-predictions
 		display flex
 		flex-flow column nowrap
@@ -337,9 +315,20 @@ style.
 		gap 1em
 		& meter
 			width 240px
+	.post-score
+		color var(--c-text-weak)
+		padding 0.5ch 1ch
+		position absolute
+		right calc(100% + 1ch)
+		top -0.5ch
+		.post-upvoted &
+			color orangered
+		.post-downvoted &
+			color var(--c-text-faint)
 	.post-subreddit
 		position absolute
-		right calc(100% + 2em)
+		right calc(100% + 2ch)
+		top 1.666em
 	.post-tags
 		display flex
 		flex-flow row wrap
@@ -351,5 +340,3 @@ style.
 		letter-spacing calc(-1px/3)
 		line-height 1.25
 		overflow-wrap anywhere
-	.post-video
-		padding 0.5em 0
