--- a/src/ui/component/shared/MediaPlayer.pug
+++ b/src/ui/component/shared/MediaPlayer.pug
@@ -171,11 +171,9 @@ style.
 		display none
 	video
 		background black
-		border-radius 1em
 		&::-webkit-media-controls
 			display none
 		:fullscreen &
-			border-radius 0
 			height 100% !important
 			width 100% !important
 		.media-player-controls-hidden &
@@ -189,7 +187,7 @@ style.
 		display flex
 		font-feature-settings 'calt', 'ss01', 'tnum'
 		gap 8px
-		margin-top 6px
+		padding 8px
 		:fullscreen &
 			bottom 0
 			left 0
@@ -202,7 +200,6 @@ style.
 	.media-player-video-hint-overlay
 		align-items center
 		background rgba(0,0,0,0.5)
-		border-radius 12px
 		color white
 		display flex
 		justify-content center
