--- a/src/ui/component/subreddit/Subreddit.pug
+++ b/src/ui/component/subreddit/Subreddit.pug
@@ -54,7 +54,7 @@ script.
 				all:
 					label: 'All'
 				unread:
-					label: 'Unread Only'
+					label: 'Unread'
 			label: 'Posts'
 			sorts:
 				_order: -> ['hot', 'new', 'other']
@@ -106,7 +106,7 @@ script.
 	)
 
 svelte:head
-	title {name.toLowerCase()}
+	title {subreddit?.display_name || name}
 {#if error}
 	{#if error.code === 403}
 		Error(message="Only approved users can access this subreddit." title="Private subreddit")
@@ -114,6 +114,8 @@ svelte:head
 		Error(message="This subreddit was closed permanently by Reddit admins." title="Subreddit banned")
 	{:else if error.reason}
 		Error(message="An error occurred. This is the best description we have of the error." title="Error: {error.reason}")
+	{:else if error instanceof api.errors.NetworkFailure}
+		Error(message="The server may be unreachable, or the subreddit may not exist." title="Subreddit unreachable")
 	{:else}
 		Error(message="An unknown error occurred." title="Unknown error")
 {:else if subreddit}
@@ -185,17 +187,17 @@ svelte:head
 
 style.
 	.subreddit
-		padding-right 96px
-		width 672px
+		padding-right 80px
+		width 520px
 	.subreddit-content
 		margin-top 2em
-		padding-left 96px
+		padding-left 80px
 	.subreddit-flair-search-close-handler
 		position absolute
 	.subreddit-header
 		align-items flex-end
 		display grid
-		gap 32px
+		gap 16px
 		grid-template-columns 64px 1fr
 		justify-items flex-start
 	.subreddit-header-options
@@ -211,16 +213,19 @@ style.
 	.subreddit-posts-header
 		align-items flex-start
 		display grid
-		gap 32px
+		gap 16px
 		grid-template-columns 64px 1fr
 		justify-items flex-start
 		margin-top 10px
 	.subreddit-posts-options
+		align-items flex-start
 		display flex
 		gap 5px
 	.subreddit-posts-options-search
+		align-items flex-start
 		display flex
 		gap 10px
 	.subreddit-posts-options-sort
+		align-items flex-start
 		display flex
 		gap 2px
