--- a/src/ui/component/wiki/Wiki.pug
+++ b/src/ui/component/wiki/Wiki.pug
@@ -83,9 +83,9 @@ style.
 	.wiki-body
 		margin-top 2em
 		:global(& > .md)
-			background var(--c-comment-bg)
+			background var(--c-subreddit-theme)
 			border-radius 1em
-			color var(--c-comment-text)
+			color var(--c-subreddit-theme-text)
 			padding 10px 1em
 	.wiki-info
 		align-items center
@@ -97,10 +97,9 @@ style.
 	.wiki-path
 		color var(--c-text-weak)
 		.wiki-path-current-page
-			color var(--c-subreddit-theme-text)
 			font-size 5em
 			font-weight var(--f-wght-strong)
-			letter-spacing -5px
+			letter-spacing -2px
 			line-height 1
 			overflow-wrap anywhere
 	:global(.wiki .toc)
