--- a/src/ui/component/feed/FeedLink.pug
+++ b/src/ui/component/feed/FeedLink.pug
@@ -1,5 +1,5 @@
 script.
-	import { format_url } from '../../routing/url.coffee'
+	import { format_url } from '../../url/index.js'
 
 	export collection_id = null
 	export multireddit_name = null
