--- a/src/ui/component/message/Message.pug
+++ b/src/ui/component/message/Message.pug
@@ -1,10 +1,10 @@
 script.
 	import api from '../../../api/index.js'
 	
-	import CommentEditor from '../comment/CommentEditor.pug'
-	import FormattedHTML from '../shared/FormattedHTML.pug'
-	import Popup from '../shared/Popup.pug'
-	import ReportDialog from '../dialog/ReportDialog.pug'
+	import CommentEditor from '../post/CommentEditor.pug'
+	import FormattedHTML from '../common/FormattedHTML.pug'
+	import Popup from '../common/Popup.pug'
+	import ReportDialog from '../feed/subreddit/ReportDialog.pug'
 	import UserAvatar from '../user/UserAvatar.pug'
 
 	export message = null
