--- a/src/ui/component/user/User.pug
+++ b/src/ui/component/user/User.pug
@@ -3,11 +3,11 @@ script.
 
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
-	import { format_url } from '../../routing/url.coffee'
+	import { format_url } from '../../url/index.js'
 
-	import ButtonFrame from '../shared/ButtonFrame.pug'
-	import ButtonGroup from '../shared/ButtonGroup.pug'
-	import Error from '../shared/Error.pug'
+	import ButtonFrame from '../common/ButtonFrame.pug'
+	import ButtonGroup from '../common/ButtonGroup.pug'
+	import Error from '../common/Error.pug'
 	import Feed from '../feed/Feed.pug'
 	import UserAvatar from './UserAvatar.pug'
 	
