--- a/src/ui/component/post/Post.pug
+++ b/src/ui/component/post/Post.pug
@@ -3,26 +3,26 @@ script.
 
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
-	import { format_url, relativize_url } from '../../routing/url.coffee'
-	import AccountData from '../shared/AccountData.coffee'
+	import { format_url, relativize_url } from '../../url/index.js'
+	import AccountState from '../../state/AccountState.coffee'
 	import html_embeds from './embeds/html_embeds.coffee'
 	import iframe_embeds from './embeds/iframe_embeds.coffee'
 
-	import BanDialog from '../dialog/BanDialog.pug'
-	import Button from '../shared/Button.pug'
-	import CommentEditor from '../comment/CommentEditor.pug'
-	import Error from '../shared/Error.pug'
-	import FormattedHTML from '../shared/FormattedHTML.pug'
-	import MediaPlayer from '../shared/MediaPlayer.pug'
-	import Popup from '../shared/Popup.pug'
+	import BanDialog from '../feed/subreddit/BanDialog.pug'
+	import Button from '../common/Button.pug'
+	import CommentEditor from './CommentEditor.pug'
+	import Error from '../common/Error.pug'
+	import FormattedHTML from '../common/FormattedHTML.pug'
+	import Popup from '../common/Popup.pug'
 	import PostComments from './PostComments.pug'
 	import PostCommentsAutorefreshButton from './PostCommentsAutorefreshButton.pug'
 	import PostFlair from './PostFlair.pug'
 	import PostTag from './PostTag.pug'
-	import ReportDialog from '../dialog/ReportDialog.pug'
-	import SubredditAvatar from '../subreddit/SubredditAvatar.pug'
+	import PostVideoPlayer from './PostVideoPlayer.pug'
+	import ReportDialog from '../feed/subreddit/ReportDialog.pug'
+	import SubredditAvatar from '../feed/subreddit/SubredditAvatar.pug'
 	import UserByline from '../user/UserByline.pug'
-	import Warning from '../shared/Warning.pug'
+	import Warning from '../common/Warning.pug'
 	
 	export comments_initial_count = 200
 	export comments_sort = null
@@ -127,7 +127,7 @@ script.
 	)
 	api.preload(api.ID('post', id, comments_sort or 'confidence', comments_initial_count, focus_comment_id, focus_comment_parent_count))
 	if expanded
-		AccountData.mark_post_read(id)
+		AccountState.mark_post_read(id)
 
 svelte:head
 	{#if expanded && post}
@@ -145,7 +145,10 @@ svelte:head
 	article.post-and-comments(class:post-and-comments-expanded={expanded})
 		article.post(class:post-downvoted={post.likes === false} class:post-upvoted={post.likes === true} class:post-with-low-score={post.score < 1} data-can-edit={post.author === api.getUser() || null} data-can-interact={(api.isLoggedIn() && !post.locked) || null} data-can-mod={post.can_mod_post || null} data-locked={post.locked || null} data-radial-menu='post' data-saved={post.saved || null} on:radialmenu={e => interact(e.detail)})
 			header.post-header
-				button.post-score(data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:mousedown={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null}) {post.hide_score ? '?' : post.score}
+				{#if api.isLoggedIn()}
+					button.post-score(data-radial-menu={false} on:contextmenu={e => e.preventDefault()} on:keydown={e => e.key === 'Enter' ? interact(e.shiftKey ? 'downvote' : 'upvote') : null} on:mousedown={e => e.button === 0 ? interact('upvote') : e.button === 2 ? interact('downvote') : null}) {post.hide_score ? '?' : post.score}
+				{:else}
+					data.post-score {post.hide_score ? '?' : post.score}
 				.post-subreddit
 					SubredditAvatar(name={post.subreddit} size='medium')
 				{#if post.link_flair_text || post.locked || post.over_18 || post.spoiler || post.stickied}
@@ -231,7 +234,7 @@ svelte:head
 								Button(link={post.url} new_tab={true} text='View on Reddit')
 						{:else if post.format === 'video'}
 							{@const media = post.media[0]}
-								MediaPlayer(audio_url={media.video_audio_url} height={360} video_url={media.video_url} width={360})
+								PostVideoPlayer(audio_url={media.video_audio_url} height={360 / media.video_aspect_ratio} video_url={media.video_url} width={360})
 						{#if post.selftext_html}
 							FormattedHTML(html={post.selftext_html})
 		{#if expanded}
@@ -271,7 +274,7 @@ style.
 		display flex
 		border-top 2px solid var(--c-page-bg)
 		flex-flow column nowrap
-		gap 2px
+		gap 1px
 		position relative
 		:global(& > .md)
 			padding 8px 10px 9px 11px
