--- a/src/ui/component/post/PostCommentsAutorefreshButton.pug
+++ b/src/ui/component/post/PostCommentsAutorefreshButton.pug
@@ -3,7 +3,7 @@ script.
 
 	import api from '../../../api/index.js'
 
-	import Button from '../shared/Button.pug'
+	import Button from '../common/Button.pug'
 	
 	export count = null
 	export post_id = null
